[gd_scene load_steps=3 format=3 uid="uid://6xi1ulr3j5tn"]

[ext_resource type="Script" path="res://scripts/panels/EntValues.gd" id="1_kn514"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ok5en"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.180392, 0.12549, 0.258824, 1)

[node name="EntValues" type="PopupPanel"]
initial_position = 1
size = Vector2i(700, 102)
visible = true
unresizable = false
borderless = false
content_scale_aspect = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ok5en")
script = ExtResource("1_kn514")

[node name="Main" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 680.0
offset_bottom = 82.0

[node name="Name" type="Label" parent="Main"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"

[node name="VariableContainer" type="VBoxContainer" parent="Main"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConfirmationButtons" type="HBoxContainer" parent="Main"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Ok" type="Button" parent="Main/ConfirmationButtons"]
layout_mode = 2
size_flags_horizontal = 0
text = "Ok"

[node name="Cancel" type="Button" parent="Main/ConfirmationButtons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Cancel"

[node name="Delete" type="Button" parent="Main/ConfirmationButtons"]
layout_mode = 2
text = "Delete"

[node name="ConfirmDelete" type="ConfirmationDialog" parent="Main/ConfirmationButtons/Delete"]
title = ""
initial_position = 2
dialog_text = "Are you sure you want to delete this entity?"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="pressed" from="Main/ConfirmationButtons/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Main/ConfirmationButtons/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Main/ConfirmationButtons/Delete" to="." method="_on_delete_pressed"]
[connection signal="confirmed" from="Main/ConfirmationButtons/Delete/ConfirmDelete" to="." method="_on_confirmation_dialog_confirmed"]
